Add css to project
Basic external css was added to all pages: elements, classes and ids were made

--- a/recipes/boerenkool.html
+++ b/recipes/boerenkool.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Boerenkool</title>
+    <link rel="stylesheet" href="./../styles.css">
 </head>
 <body>
-    <h1>Boerenkool</h1>   
-    <img src="./../img/boerenkool.jpg" alt="verse boerenkool met rookworst" style="width:600px"/> 
-    <h3>Heerlijke zompige boer'nkeul mee reukwerst</h3>
+    <h1 class="header">Boerenkool</h1>   
+    <img class=image src="./../img/boerenkool.jpg" alt="verse boerenkool met rookworst"/> 
+    <h3 class="header sub">Heerlijke zompige boer'nkeul mee reukwerst</h3>
     <p>Deze klassieke Hollandse stamppot met rookworst mag niet ontbreken tijdens de winter. 
         Lekker met appelmoes of gebakken spekjes.</p>
     <p>Hieronder beschrijven we oma's favoriete en geheime ;) variant</p>
     <h4>Ingredienten</h4>
-    <ul>
+    <ul id="list">
         <li>300 g gesneden boerenkool</li>
         <li>500 g kruimige aardappels (geschild)</li>
         <li>1 grote rookworst</li>
@@ -25,7 +26,7 @@
         <li>Snufje nootmuskaat</li>
     </ul>
     <h4>Bereidingswijze</h4>
-    <ol>
+    <ol id="list">
         <li>Breng een grote pan water met een snufje zout aan de kook en voeg de aardappels hier aan toe in gelijke groottes</li>
         <li>Voeg de gesneden boerenkool toe en laat bovenop de aardappels drijven.
         </li>
