--- a/recipes/cabbage_roll_casserole.html
+++ b/recipes/cabbage_roll_casserole.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cabbage roll casserole</title>
+    <link rel="stylesheet" href="./../styles.css">
 </head>
 <body>
-    <h1>Cabbage roll casserole</h1>
-    <img src="./../img/cabbagerollcasserole.jpg" alt="delicious cabbage roll casserole" style="width:600px"/>
-    <h3>Delicious cabbage roll casserole, easily made!</h3>
+    <h1 class="header">Cabbage roll casserole</h1>
+    <img class="image" src="./../img/cabbagerollcasserole.jpg" alt="delicious cabbage roll casserole" style="width:600px"/>
+    <h3 class="header sub">Delicious cabbage roll casserole, easily made!</h3>
     <p>My cabbage roll casserole has all the ingredients of stuffed cabbage rolls but is a lot easier to make! This basic recipe will appeal to everyone but if you prefer more flavor, consider adding crushed garlic, paprika, thyme, or cayenne pepper.</p>
     <h4>Ingredients</h4>
     <ul>
@@ -22,7 +23,7 @@
         <li>2 (14 ounce) cans beef broth</li>
     </ul>
     <h4>Directions</h4>
-    <ol>
+    <ol id="list">
         <li>Preheat the oven to 350 degrees F (175 degrees C).
         </li>
         <li>Heat a large skillet over medium-high heat. Cook and stir ground beef in the hot skillet until browned and crumbly, 5 to 7 minutes. Drain and discard grease.</li>
