--- a/recipes/tuna_noodle_casserole.html
+++ b/recipes/tuna_noodle_casserole.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tuna noodle casserole</title>
+    <link rel="stylesheet" href="./../styles.css">
 </head>
 <body>
-    <h1>Tuna noodle casserole</h1>
-    <img src="./../img/tunanoodlecasserole.jpg" alt="Delicious tuna noodle casserole" style="width:600px"/>
-    <h3>Delicious tuna noodle casserole in a few easy steps!</h3>
+    <h1 class="header">Tuna noodle casserole</h1>
+    <img class="image" src="./../img/tunanoodlecasserole.jpg" alt="Delicious tuna noodle casserole" style="width:600px"/>
+    <h3 class="header sub">Delicious tuna noodle casserole in a few easy steps!</h3>
     <p>This tuna noodle casserole is the best with a classic creamy taste from my childhood. The sauce is rich and creamy but not overwhelmingly heavy. The crunch from the topping and fresh bite from the parsley create the perfect balance. Let's not forget that this is a great budget-friendly meal to feed a crowd!</p>
     <h4>Ingredients</h4>
-    <ul>
+    <ul id="list">
         <li>1 (12 ounce) package egg noodles</li>
         <li>4 ¼ teaspoons kosher salt, divided</li>
         <li>4 tablespoons salted butter, divided</li>
@@ -33,7 +34,7 @@
         <li>2 tablespoons finely chopped fresh parsley</li>
     </ul>
     <h4>Directions</h4>
-    <ol>
+    <ol id="list">
         <li>Preheat the oven to 375 degrees F (190 degrees C). Grease a 9x13-inch baking dish.</li>
         <li>Bring a large pot of water to a boil. Add egg noodles and 3 teaspoons salt to the boiling water; cook until tender yet firm to the bite, about 6 minutes. Drain noodles. Return to pot and set aside.</li>
         <li>Heat 2 tablespoons butter and 1 tablespoon oil in a large skillet over medium-high heat. Add mushrooms and onion and cook until mushrooms are softened and onions are translucent, about 4 minutes. Add remaining butter; stir constantly until melted. Sprinkle flour over vegetable mixture and cook, stirring constantly, for 1 minute. Stir in milk and stock and bring to a simmer, stirring often. Simmer for 5 minutes. Stir in lemon juice, Dijon mustard, 1 teaspoon salt, and pepper.</li>
